# archival-twin

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements-gpu.txt  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/db/: database.py  repository.py
backend/app/models/: schemas.py
backend/app/routes/: archive.py  health.py  match.py  retrieval.py
backend/app/services/: book_retriever.py  caption_generator.py  face_engine.py  face_engine_stub.py  matcher.py
backend/app/utils/: image.py  timing.py
backend/cli/: ingest.py  validate.py
backend/data/: archive.db-shm  archive.db-wal
backend/scripts/: process_book.py
docs/: ethics_notes.md  installation_setup.md  runbook.md  windows_deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ArchivalVoicePanel.tsx  CameraCapture.tsx  DisclosurePanel.tsx  ErrorOverlay.tsx  PipelineStatus.tsx  SplitScreen.tsx  TwinPanel.tsx  VisitorPanel.tsx
frontend/src/content/: disclosureText.ts
frontend/src/hooks/: useCamera.ts  useFaceDetector.ts  useMatch.ts  usePipelineStages.ts
frontend/src/styles/: global.css
